Public/Src/Tools/Execution.Analyzer/Analyzers.Core/XlgDebugger/JPath/JPathParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from JPath.g4 by ANTLR 4.7.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace BuildXL.Execution.Analyzer.JPath {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.2")]
[System.CLSCompliant(false)]
public partial class JPathParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9,
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, WS=15, NOT=16, AND=17,
		OR=18, XOR=19, IFF=20, GTE=21, LTE=22, GT=23, LT=24, EQ=25, NEQ=26, MATCH=27,
		NMATCH=28, MINUS=29, PLUS=30, TIMES=31, DIV=32, MOD=33, CONCAT=34, INTERSECT=35,
		IntLit=36, StrLit=37, RegExLit=38, PropertyId=39, VarId=40, EscID=41,
		Opt=42;
	public const int
		RULE_intBinaryOp = 0, RULE_intUnaryOp = 1, RULE_boolBinaryOp = 2, RULE_logicBinaryOp = 3,
		RULE_logicUnaryOp = 4, RULE_arrayBinaryOp = 5, RULE_anyBinaryOp = 6, RULE_intExpr = 7,
		RULE_boolExpr = 8, RULE_logicExpr = 9, RULE_prop = 10, RULE_selector = 11,
		RULE_literal = 12, RULE_expr = 13;
	public static readonly string[] ruleNames = {
		"intBinaryOp", "intUnaryOp", "boolBinaryOp", "logicBinaryOp", "logicUnaryOp",
		"arrayBinaryOp", "anyBinaryOp", "intExpr", "boolExpr", "logicExpr", "prop",
		"selector", "literal", "expr"
	};

	private static readonly string[] _LiteralNames = {
		null, "'('", "')'", "'$'", "'.'", "'['", "']'", "'..'", "'#'", "','",
		"'|'", "'let'", "':='", "'in'", "';'", null, "'not'", "'and'", "'or'",
		"'xor'", "'iff'", "'>='", "'<='", "'>'", "'<'", "'='", "'!='", "'~'",
		"'!~'", "'-'", "'+'", "'*'", "'/'", "'%'", "'++'", "'&'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null,
		null, null, null, "WS", "NOT", "AND", "OR", "XOR", "IFF", "GTE", "LTE",
		"GT", "LT", "EQ", "NEQ", "MATCH", "NMATCH", "MINUS", "PLUS", "TIMES",
		"DIV", "MOD", "CONCAT", "INTERSECT", "IntLit", "StrLit", "RegExLit", "PropertyId",
		"VarId", "EscID", "Opt"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "JPath.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static JPathParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public JPathParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public JPathParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class IntBinaryOpContext : ParserRuleContext {
		public IToken Token;
		public ITerminalNode PLUS() { return GetToken(JPathParser.PLUS, 0); }
		public ITerminalNode MINUS() { return GetToken(JPathParser.MINUS, 0); }
		public ITerminalNode TIMES() { return GetToken(JPathParser.TIMES, 0); }
		public ITerminalNode DIV() { return GetToken(JPathParser.DIV, 0); }
		public ITerminalNode MOD() { return GetToken(JPathParser.MOD, 0); }
		public IntBinaryOpContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_intBinaryOp; } }
		public override void EnterRule(IParseTreeListener listener) {
			IJPathListener typedListener = listener as IJPathListener;
			if (typedListener != null) typedListener.EnterIntBinaryOp(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IJPathListener typedListener = listener as IJPathListener;
			if (typedListener != null) typedListener.ExitIntBinaryOp(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJPathVisitor<TResult> typedVisitor = visitor as IJPathVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIntBinaryOp(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IntBinaryOpContext intBinaryOp() {
		IntBinaryOpContext _localctx = new IntBinaryOpContext(Context, State);
		EnterRule(_localctx, 0, RULE_intBinaryOp);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 28;
			_localctx.Token = TokenStream.LT(1);
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MINUS) | (1L << PLUS) | (1L << TIMES) | (1L << DIV) | (1L << MOD))) != 0)) ) {
				_localctx.Token = ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IntUnaryOpContext : ParserRuleContext {
		public IToken Token;
		public ITerminalNode MINUS() { return GetToken(JPathParser.MINUS, 0); }
		public IntUnaryOpContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_intUnaryOp; } }
		public override void EnterRule(IParseTreeListener listener) {
			IJPathListener typedListener = listener as IJPathListener;
			if (typedListener != null) typedListener.EnterIntUnaryOp(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IJPathListener typedListener = listener as IJPathListener;
			if (typedListener != null) typedListener.ExitIntUnaryOp(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJPathVisitor<TResult> typedVisitor = visitor as IJPathVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIntUnaryOp(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IntUnaryOpContext intUnaryOp() {
		IntUnaryOpContext _localctx = new IntUnaryOpContext(Context, State);
		EnterRule(_localctx, 2, RULE_intUnaryOp);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 30; _localctx.Token = Match(MINUS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BoolBinaryOpContext : ParserRuleContext {
		public IToken Token;
		public ITerminalNode GTE() { return GetToken(JPathParser.GTE, 0); }
		public ITerminalNode GT() { return GetToken(JPathParser.GT, 0); }
		public ITerminalNode LTE() { return GetToken(JPathParser.LTE, 0); }
		public ITerminalNode LT() { return GetToken(JPathParser.LT, 0); }
		public ITerminalNode EQ() { return GetToken(JPathParser.EQ, 0); }
		public ITerminalNode NEQ() { return GetToken(JPathParser.NEQ, 0); }
		public ITerminalNode MATCH() { return GetToken(JPathParser.MATCH, 0); }
		public ITerminalNode NMATCH() { return GetToken(JPathParser.NMATCH, 0); }
		public BoolBinaryOpContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_boolBinaryOp; } }
		public override void EnterRule(IParseTreeListener listener) {
			IJPathListener typedListener = listener as IJPathListener;
			if (typedListener != null) typedListener.EnterBoolBinaryOp(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IJPathListener typedListener = listener as IJPathListener;
			if (typedListener != null) typedListener.ExitBoolBinaryOp(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJPathVisitor<TResult> typedVisitor = visitor as IJPathVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBoolBinaryOp(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BoolBinaryOpContext boolBinaryOp() {
		BoolBinaryOpContext _localctx = new BoolBinaryOpContext(Context, State);
		EnterRule(_localctx, 4, RULE_boolBinaryOp);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 32;
			_localctx.Token = TokenStream.LT(1);
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << GTE) | (1L << LTE) | (1L << GT) | (1L << LT) | (1L << EQ) | (1L << NEQ) | (1L << MATCH) | (1L << NMATCH))) != 0)) ) {
				_localctx.Token = ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LogicBinaryOpContext : ParserRuleContext {
		public IToken Token;
		public ITerminalNode AND() { return GetToken(JPathParser.AND, 0); }
		public ITerminalNode OR() { return GetToken(JPathParser.OR, 0); }
		public ITerminalNode XOR() { return GetToken(JPathParser.XOR, 0); }
		public ITerminalNode IFF() { return GetToken(JPathParser.IFF, 0); }
		public LogicBinaryOpContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_logicBinaryOp; } }
		public override void EnterRule(IParseTreeListener listener) {
			IJPathListener typedListener = listener as IJPathListener;
			if (typedListener != null) typedListener.EnterLogicBinaryOp(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IJPathListener typedListener = listener as IJPathListener;
			if (typedListener != null) typedListener.ExitLogicBinaryOp(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJPathVisitor<TResult> typedVisitor = visitor as IJPathVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLogicBinaryOp(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LogicBinaryOpContext logicBinaryOp() {
		LogicBinaryOpContext _localctx = new LogicBinaryOpContext(Context, State);
		EnterRule(_localctx, 6, RULE_logicBinaryOp);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 34;
			_localctx.Token = TokenStream.LT(1);
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AND) | (1L << OR) | (1L << XOR) | (1L << IFF))) != 0)) ) {
				_localctx.Token = ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LogicUnaryOpContext : ParserRuleContext {
		public IToken Token;
		public ITerminalNode NOT() { return GetToken(JPathParser.NOT, 0); }
		public LogicUnaryOpContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_logicUnaryOp; } }
		public override void EnterRule(IParseTreeListener listener) {
			IJPathListener typedListener = listener as IJPathListener;
			if (typedListener != null) typedListener.EnterLogicUnaryOp(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IJPathListener typedListener = listener as IJPathListener;
			if (typedListener != null) typedListener.ExitLogicUnaryOp(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJPathVisitor<TResult> typedVisitor = visitor as IJPathVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLogicUnaryOp(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LogicUnaryOpContext logicUnaryOp() {
		LogicUnaryOpContext _localctx = new LogicUnaryOpContext(Context, State);
		EnterRule(_localctx, 8, RULE_logicUnaryOp);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 36; _localctx.Token = Match(NOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ArrayBinaryOpContext : ParserRuleContext {
		public IToken Token;
		public ITerminalNode CONCAT() { return GetToken(JPathParser.CONCAT, 0); }
		public ITerminalNode INTERSECT() { return GetToken(JPathParser.INTERSECT, 0); }
		public ArrayBinaryOpContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_arrayBinaryOp; } }
		public override void EnterRule(IParseTreeListener listener) {
			IJPathListener typedListener = listener as IJPathListener;
			if (typedListener != null) typedListener.EnterArrayBinaryOp(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IJPathListener typedListener = listener as IJPathListener;
			if (typedListener != null) typedListener.ExitArrayBinaryOp(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJPathVisitor<TResult> typedVisitor = visitor as IJPathVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArrayBinaryOp(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ArrayBinaryOpContext arrayBinaryOp() {
		ArrayBinaryOpContext _localctx = new ArrayBinaryOpContext(Context, State);
		EnterRule(_localctx, 10, RULE_arrayBinaryOp);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 38;
			_localctx.Token = TokenStream.LT(1);
			_la = TokenStream.LA(1);
			if ( !(_la==CONCAT || _la==INTERSECT) ) {
				_localctx.Token = ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AnyBinaryOpContext : ParserRuleContext {
		public IntBinaryOpContext intBinaryOp() {
			return GetRuleContext<IntBinaryOpContext>(0);
		}
		public BoolBinaryOpContext boolBinaryOp() {
			return GetRuleContext<BoolBinaryOpContext>(0);
		}
		public LogicBinaryOpContext logicBinaryOp() {
			return GetRuleContext<LogicBinaryOpContext>(0);
		}
		public ArrayBinaryOpContext arrayBinaryOp() {
			return GetRuleContext<ArrayBinaryOpContext>(0);
		}
		public AnyBinaryOpContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_anyBinaryOp; } }
		public override void EnterRule(IParseTreeListener listener) {
			IJPathListener typedListener = listener as IJPathListener;
			if (typedListener != null) typedListener.EnterAnyBinaryOp(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IJPathListener typedListener = listener as IJPathListener;
			if (typedListener != null) typedListener.ExitAnyBinaryOp(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJPathVisitor<TResult> typedVisitor = visitor as IJPathVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAnyBinaryOp(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AnyBinaryOpContext anyBinaryOp() {
		AnyBinaryOpContext _localctx = new AnyBinaryOpContext(Context, State);
		EnterRule(_localctx, 12, RULE_anyBinaryOp);
		try {
			State = 44;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case MINUS:
			case PLUS:
			case TIMES:
			case DIV:
			case MOD:
				EnterOuterAlt(_localctx, 1);
				{
				State = 40; intBinaryOp();
				}
				break;
			case GTE:
			case LTE:
			case GT:
			case LT:
			case EQ:
			case NEQ:
			case MATCH:
			case NMATCH:
				EnterOuterAlt(_localctx, 2);
				{
				State = 41; boolBinaryOp();
				}
				break;
			case AND:
			case OR:
			case XOR:
			case IFF:
				EnterOuterAlt(_localctx, 3);
				{
				State = 42; logicBinaryOp();
				}
				break;
			case CONCAT:
			case INTERSECT:
				EnterOuterAlt(_localctx, 4);
				{
				State = 43; arrayBinaryOp();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IntExprContext : ParserRuleContext {
		public IntExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_intExpr; } }

		public IntExprContext() { }
		public virtual void CopyFrom(IntExprContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class BinaryIntExprContext : IntExprContext {
		public IntExprContext Lhs;
		public IntBinaryOpContext Op;
		public IntExprContext Rhs;
		public IntExprContext[] intExpr() {
			return GetRuleContexts<IntExprContext>();
		}
		public IntExprContext intExpr(int i) {
			return GetRuleContext<IntExprContext>(i);
		}
		public IntBinaryOpContext intBinaryOp() {
			return GetRuleContext<IntBinaryOpContext>(0);
		}
		public BinaryIntExprContext(IntExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IJPathListener typedListener = listener as IJPathListener;
			if (typedListener != null) typedListener.EnterBinaryIntExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IJPathListener typedListener = listener as IJPathListener;
			if (typedListener != null) typedListener.ExitBinaryIntExpr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJPathVisitor<TResult> typedVisitor = visitor as IJPathVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBinaryIntExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ExprIntExprContext : IntExprContext {
		public ExprContext Expr;
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ExprIntExprContext(IntExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IJPathListener typedListener = listener as IJPathListener;
			if (typedListener != null) typedListener.EnterExprIntExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IJPathListener typedListener = listener as IJPathListener;
			if (typedListener != null) typedListener.ExitExprIntExpr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJPathVisitor<TResult> typedVisitor = visitor as IJPathVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExprIntExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class UnaryIntExprContext : IntExprContext {
		public IntUnaryOpContext Op;
		public IntExprContext Sub;
		public IntUnaryOpContext intUnaryOp() {
			return GetRuleContext<IntUnaryOpContext>(0);
		}
		public IntExprContext intExpr() {
			return GetRuleContext<IntExprContext>(0);
		}
		public UnaryIntExprContext(IntExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IJPathListener typedListener = listener as IJPathListener;
			if (typedListener != null) typedListener.EnterUnaryIntExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IJPathListener typedListener = listener as IJPathListener;
			if (typedListener != null) typedListener.ExitUnaryIntExpr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJPathVisitor<TResult> typedVisitor = visitor as IJPathVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUnaryIntExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class SubIntExprContext : IntExprContext {
		public IntExprContext Sub;
		public IntExprContext intExpr() {
			return GetRuleContext<IntExprContext>(0);
		}
		public SubIntExprContext(IntExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IJPathListener typedListener = listener as IJPathListener;
			if (typedListener != null) typedListener.EnterSubIntExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IJPathListener typedListener = listener as IJPathListener;
			if (typedListener != null) typedListener.ExitSubIntExpr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJPathVisitor<TResult> typedVisitor = visitor as IJPathVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSubIntExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IntExprContext intExpr() {
		return intExpr(0);
	}

	private IntExprContext intExpr(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		IntExprContext _localctx = new IntExprContext(Context, _parentState);
		IntExprContext _prevctx = _localctx;
		int _startState = 14;
		EnterRecursionRule(_localctx, 14, RULE_intExpr, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 55;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				{
				_localctx = new ExprIntExprContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;

				State = 47; ((ExprIntExprContext)_localctx).Expr = expr(0);
				}
				break;
			case 2:
				{
				_localctx = new UnaryIntExprContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 48; ((UnaryIntExprContext)_localctx).Op = intUnaryOp();
				State = 49; ((UnaryIntExprContext)_localctx).Sub = intExpr(3);
				}
				break;
			case 3:
				{
				_localctx = new SubIntExprContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 51; Match(T__0);
				State = 52; ((SubIntExprContext)_localctx).Sub = intExpr(0);
				State = 53; Match(T__1);
				}
				break;
			}
			Context.Stop = TokenStream.LT(-1);
			State = 63;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new BinaryIntExprContext(new IntExprContext(_parentctx, _parentState));
					((BinaryIntExprContext)_localctx).Lhs = _prevctx;
					PushNewRecursionContext(_localctx, _startState, RULE_intExpr);
					State = 57;
					if (!(Precpred(Context, 2))) throw new FailedPredicateException(this, "Precpred(Context, 2)");
					State = 58; ((BinaryIntExprContext)_localctx).Op = intBinaryOp();
					State = 59; ((BinaryIntExprContext)_localctx).Rhs = intExpr(3);
					}
					}
				}
				State = 65;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class BoolExprContext : ParserRuleContext {
		public BoolExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_boolExpr; } }

		public BoolExprContext() { }
		public virtual void CopyFrom(BoolExprContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class BinaryBoolExprContext : BoolExprContext {
		public IntExprContext Lhs;
		public BoolBinaryOpContext Op;
		public IntExprContext Rhs;
		public IntExprContext[] intExpr() {
			return GetRuleContexts<IntExprContext>();
		}
		public IntExprContext intExpr(int i) {
			return GetRuleContext<IntExprContext>(i);
		}
		public BoolBinaryOpContext boolBinaryOp() {
			return GetRuleContext<BoolBinaryOpContext>(0);
		}
		public BinaryBoolExprContext(BoolExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IJPathListener typedListener = listener as IJPathListener;
			if (typedListener != null) typedListener.EnterBinaryBoolExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IJPathListener typedListener = listener as IJPathListener;
			if (typedListener != null) typedListener.ExitBinaryBoolExpr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJPathVisitor<TResult> typedVisitor = visitor as IJPathVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBinaryBoolExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class SubBoolExprContext : BoolExprContext {
		public BoolExprContext Sub;
		public BoolExprContext boolExpr() {
			return GetRuleContext<BoolExprContext>(0);
		}
		public SubBoolExprContext(BoolExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IJPathListener typedListener = listener as IJPathListener;
			if (typedListener != null) typedListener.EnterSubBoolExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IJPathListener typedListener = listener as IJPathListener;
			if (typedListener != null) typedListener.ExitSubBoolExpr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJPathVisitor<TResult> typedVisitor = visitor as IJPathVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSubBoolExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
